Fix thumbnails overlapping heading on profile on Windows

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -154,12 +154,6 @@ a {
   border-radius: 4px;
   padding: 5px;
   background-color: #fff;
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
 }
 
 img {
